# devsearch

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  manage.py  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: README.md
apps/projects/: apps.py
devsearch/: settings.py
docs/: README.md
pre_commit_hooks/: cleanup.py
projects/: admin.py  apps.py  models.py  tests.py  views.py
tests/: test_ex1.py
